# ttf2json

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/ttf2json/: __init__.py  ttf2json.py
